--- a/dictionary-server/package.json
+++ b/dictionary-server/package.json
@@ -4,6 +4,7 @@
   "main": "dist/js/index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
