--- a/dictionary-server/package.json
+++ b/dictionary-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dictionary-server",
   "version": "1.0.0",
-  "main": "dist/js/index.js",
+  "main": "dist/js/app.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.1.3",
@@ -11,13 +11,19 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.5.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
